WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53842
WAI-ARIA @aria-sort not exposed on rowheader and columnheader roles
https://bugs.webkit.org/show_bug.cgi?id=53842
Summary
WAI-ARIA @aria-sort not exposed on rowheader and columnheader roles
chris fleizach
Reported
2011-02-04 22:02:07 PST
WAI-ARIA @aria-sort not exposed on rowheader and column header roles Cocoa table headers are exposed as AXSortButtons, and ARIA table headers are cells. However, ARIA row and col headers can contain an aria-sort attribute with the following values for: AXSortDirection: AXAscendingSortDirection | AXDescendingSortDirection
Attachments
Patch
(8.57 KB, patch)
2011-02-06 21:14 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-02-06 20:56:12 PST
***
Bug 53876
has been marked as a duplicate of this bug. ***
chris fleizach
Comment 2
2011-02-06 21:14:43 PST
Created
attachment 81448
[details]
Patch
Darin Adler
Comment 3
2011-02-07 08:15:00 PST
Comment on
attachment 81448
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=81448&action=review
> Source/WebCore/accessibility/mac/AccessibilityObjectWrapper.mm:1990 > + switch (m_object->sortDirection()) { > + case SortDirectionAscending: > + return NSAccessibilityAscendingSortDirectionValue; > + case SortDirectionDescending: > + return NSAccessibilityDescendingSortDirectionValue; > + default: > + return NSAccessibilityUnknownSortDirectionValue; > + }
WebKit style doesn't indent the case inside the switch.
chris fleizach
Comment 4
2011-02-07 09:15:23 PST
Comment on
attachment 81448
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=81448&action=review
thanks for the review
>> Source/WebCore/accessibility/mac/AccessibilityObjectWrapper.mm:1990 >> + } > > WebKit style doesn't indent the case inside the switch.
strange that the style bot didn't catch this one
chris fleizach
Comment 5
2011-02-07 09:24:34 PST
http://trac.webkit.org/changeset/77820
James Craig
Comment 6
2013-07-09 09:49:22 PDT
See also:
Bug 118511
: AX: WebKit doesn't map aria-sort=other
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug