Source/WebCore: WAI-ARIA @aria-sort not exposed on rowheader and columnheader roles. https://bugs.webkit.org/show_bug.cgi?id=53842

Reviewed by Darin Adler.

Test: platform/mac/accessibility/aria-sort.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::sortDirection):
* accessibility/AccessibilityObject.h:
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper additionalAccessibilityAttributeNames]):
(-[AccessibilityObjectWrapper accessibilityAttributeValue:]):
* html/HTMLAttributeNames.in:

LayoutTests: WAI-ARIA @aria-sort not exposed on rowheader and columnheader roles
https://bugs.webkit.org/show_bug.cgi?id=53842

Reviewed by Darin Adler.

* platform/mac/accessibility/aria-sort-expected.txt: Added.
* platform/mac/accessibility/aria-sort.html: Added.



Canonical link: https://commits.webkit.org/67881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77820 268f45cc-cd09-0410-ab3c-d52691b4dbfc