Source/WebCore/accessibility/AccessibilityObject.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2008, 2009 Apple Inc. All rights reserved.
+ * Copyright (C) 2008, 2009, 2011 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -1049,6 +1049,17 @@ AccessibilityObject* AccessibilityObject::focusedUIElement() const
         return 0;
     
     return AXObjectCache::focusedUIElementForPage(page);
+}
+    
+AccessibilitySortDirection AccessibilityObject::sortDirection() const
+{
+    const AtomicString& sortAttribute = getAttribute(aria_sortAttr);
+    if (equalIgnoringCase(sortAttribute, "ascending"))
+        return SortDirectionAscending;
+    if (equalIgnoringCase(sortAttribute, "descending"))
+        return SortDirectionDescending;
+    
+    return SortDirectionNone;
 }
     
 bool AccessibilityObject::supportsARIAExpanded() const
